--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@mui/x-date-pickers": "^5.0.4",
     "@types/node": "^18.8.3",
+    "axios": "^1.1.2",
     "dayjs": "^1.11.5",
     "eslint": "^8.0.1",
+    "google-map-react": "^2.2.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
