--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,11 @@
     }
   },
   "include": [
-    "src"
+    "vite.config.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/custom.d.ts",
+    "**/*.d.ts"
   ],
   "references": [
     {
