--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.6",
-    "@mui/material": "^5.10.8",
+    "@mui/lab": "^5.0.0-alpha.105",
+    "@mui/material": "^5.10.11",
     "@mui/x-date-pickers": "^5.0.4",
     "@types/node": "^18.8.3",
     "axios": "^1.1.2",
