--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/node": "^18.8.3",
     "axios": "^1.1.2",
     "dayjs": "^1.11.5",
+    "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "eslint": "^8.0.1",
     "google-map-react": "^2.2.0",
     "material-ui-icons": "^1.0.0-beta.36",
