--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=https://21c5355e-15b3-45ea-8579-713e0fb5d5fb.mock.pstmn.io
+VITE_API_URL=https://hw7ynqqpp6.execute-api.eu-north-1.amazonaws.com/dev
