--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.105",
     "@mui/material": "^5.10.11",
+    "@mui/x-data-grid": "^5.17.12",
     "@mui/x-date-pickers": "^5.0.4",
     "@types/node": "^18.8.3",
     "axios": "^1.1.2",
