--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "noImplicitAny": false,
   },
   "include": [
     "vite.config.ts",
