--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,23 +9,28 @@
     ],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "noEmit": true,
-    "noImplicitReturns": false,
     "jsx": "react-jsx",
+    "incremental": true,
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
     },
-    "noImplicitAny": false,
+    "noImplicitAny": false
   },
   "include": [
     "vite.config.ts",
@@ -34,9 +39,7 @@
     "src/custom.d.ts",
     "**/*.d.ts"
   ],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
