--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "vite-plugin-svgr": "^2.2.2",
+    "vite-tsconfig-paths": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
